feat: 섬네일 반환 적용